@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/DBIx-DBSchema-0.400.0.ebuild,v 1.7 2012/09/30 18:19:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/DBIx-DBSchema-0.400.0-r1.ebuild,v 1.1 2014/08/23 02:32:12 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=IVAN
 MODULE_VERSION=0.40
