@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/DBIx-DBSchema
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/ChangeLog,v 1.53 2013/01/08 18:24:09 tove Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/ChangeLog,v 1.54 2014/08/23 02:32:12 axs Exp $
+
+*DBIx-DBSchema-0.400.0-r1 (23 Aug 2014)
+
+  23 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +DBIx-DBSchema-0.400.0-r1.ebuild, -DBIx-DBSchema-0.400.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   08 Jan 2013; Torsten Veller <tove@gentoo.org> -DBIx-DBSchema-0.390.0.ebuild:
   Cleanup
